--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -150,13 +150,26 @@
 </div>
 
 <!--User panel-->
-<div th:fragment="user-panel" class="workout-tab-container">
-    <div class="workout-content-container">
+<div th:fragment="user-panel" class="row no-gutters workout-tab-container" style="height: 500px;">
+    <div id="workout-content-container" class="col">
         <h2>Whatever</h2>
     </div>
-    <div class="workout-selection-container">
-        <h2>Whatever</h2>
+    <div id="workout-selection-container" class="col">
+        <h2>Wat?</h2>
     </div>
+    <script>
+        let splitobj = Split(["#workout-content-container","#workout-selection-container"], {
+            elementStyle: function (dimension, size, gutterSize) {
+                $(window).trigger('resize'); // Optional
+                return {'flex-basis': 'calc(' + size + '% - ' + gutterSize + 'px)'}
+            },
+            gutterStyle: function (dimension, gutterSize) { return {'flex-basis':  gutterSize + 'px'} },
+            sizes: [75,25],
+            minSize: 0,
+            gutterSize: 6,
+            cursor: 'col-resize'
+        });
+    </script>
 </div>
 <!--<div th:fragment="user-panel" class="workout-tab-container">-->
 <!--    <div class="workout-content-container">-->
