--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -15,8 +15,8 @@
     <title>Weightlifting Log Home</title>
 </head>
 <body>
-<div class="main-container">
-    <div class="top-container">
+<div id="main-container">
+    <div id="top-container">
         <div id="logo-container" style="display: block;">
 
             <!--Title and logo section-->
@@ -45,7 +45,7 @@
     <!--Tab content-->
     <!--Either main calculator tab or login tab content are visible
     depending on boolean variable sent from controller-->
-    <div class="content-container">
+    <div id="content-container">
         <div id="filler-1" style="display: none;">
             <br>
         </div>
@@ -731,7 +731,6 @@
                 </div>
             </div>
         </div>
-        <div><p><br/></p></div>
     </div>
     <!--Page footer content-->
 </div>
